<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.ipg.colecaojogos.MenuPrincipalFragment"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SobreFragment"
            app:destination="@id/SobreFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_ListaJogosFragment"
            app:destination="@id/ListaJogosFragment" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragment"
        android:name="pt.ipg.colecaojogos.SobreFragment"
        android:label="@string/sobre_fragment_label"
        tools:layout="@layout/fragment_sobre">

        <action
            android:id="@+id/action_SobreFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaJogosFragment"
        android:name="pt.ipg.colecaojogos.ListaJogosFragment"
        android:label="@string/jogos_lista_label"
        tools:layout="@layout/fragment_lista_jogos">
        <action
            android:id="@+id/action_ListaJogosFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_ListaJogosFragment_to_EditarJogoFragment"
            app:destination="@id/EditarJogoFragment" />
        <action
            android:id="@+id/action_ListaJogosFragment_to_EliminarJogoFragment"
            app:destination="@id/EliminarJogoFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditarJogoFragment"
        android:name="pt.ipg.colecaojogos.EditarJogoFragment"
        android:label="@string/novo_jogo_label"
        tools:layout="@layout/fragment_editar_jogo">
        <action
            android:id="@+id/action_EditarJogoFragment_to_ListaJogosFragment"
            app:destination="@id/ListaJogosFragment" />
        <argument
            android:name="jogo"
            app:argType="pt.ipg.colecaojogos.Jogo"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/EliminarJogoFragment"
        android:name="pt.ipg.colecaojogos.EliminarJogoFragment"
        android:label="@string/eliminar_jogo"
        tools:layout="@layout/fragment_eliminar_jogo" >
        <action
            android:id="@+id/action_EliminarJogoFragment_to_ListaJogosFragment"
            app:destination="@id/ListaJogosFragment" />
        <argument
            android:name="jogo"
            app:argType="pt.ipg.colecaojogos.Jogo" />
    </fragment>
</navigation>