<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".EliminarJogoFragment">

    <TextView
        android:id="@+id/textViewTextoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nome"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Alien" />

    <TextView
        android:id="@+id/textViewTextoPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/precoEuro"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textViewPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="10.50" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/desenvolvedor"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textViewDesenvolvedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/desenvolvedor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/categoria"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Terror" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/data_publicacao"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textViewDataPub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="01/01/1968" />
</LinearLayout>